includes/plugin/layouts/ecomma_45_10_45.css
.panel-col-fourtyfive {
  width: 45%;
}

.panel-col-ten {
  width: 7%;
}

.panel-header,
.panel-footer {
  width: 100%;
}

@media screen and (max-width: 319px) {
  .unit {
    float: none !important;
    width: auto !important;
  }
}

.line:after,
.lastUnit:after {
  clear: both;
  display: block;
  visibility: hidden;
  overflow: hidden;
  height: 0 !important;
  line-height: 0;
}

.unit {
  float: left;
}

.lastUnit {
  float: none;
  width: auto;
}

div.panel-panel.unit.panel-footer.lastUnit{
  position:relative;
  width:80%;
  bottom: 0px;
}

.page-manager-ajax-pad div.panel-panel.unit.panel-footer.lastUnit{
  width:100%;
  float:left;
}

.page-manager-ajax-pad div.panel-panel.unit.panel-footer.lastUnit #footer{
  display: none;
}

.lastUnit .inside {
  margin: 0 0 1em .5em;
}

.firstUnit .inside {
  margin: 0 .5em 1em 0;
  padding: 15px;
  background: #fff;
  border: 1px solid #d1d1cd;
}

.unit .inside {
  margin: 0 .5em 1em .5em;
}

.words,
.tags,
.comments,
.comments_all_cloud,
.annotation_count {
  margin: 0px;
  padding: 15px;
  background: #fff;
  margin: 0 auto;
}

.words a,
.tags a,
.comments a,
.comments_all_cloud a,
.annotation_count a {
  display: block;
  height: 35px;
  width: 35px;
}

.words a {
  background: transparent url('img/word_cloud.png') 1px 0px no-repeat;
}

#tabs-icons .ui-state-active.words a,
#tabs-icons .ui-state-active.words a: link,
#tabs-icons .ui-state-active.words a: visited {
  color: #000;
  background: #fff url('img/word_cloud.png') 1px 0px no-repeat;
}

.tags a {
  background: transparent url('img/tag_cloud.png') 1px 0px no-repeat;
}

li.tags a p,
li.comments a p {
  color: #d00;
  position: absolute;
  top: 32px;
  text-align: center;
  margin: 0px auto;
  width: 23px;
}

li.tags a {
  color: #ac1a2f;
}

li.comments a p {
  color: #69f;
}

li.annotation_count a p {
  color: #000;
  margin: 0;
}

#pane-community-tags-0 a {
  color: #ac1a2f;
}

#tabs-icons .ui-state-active.tags a,
#tabs-icons .ui-state-active.tags a: link,
#tabs-icons .ui-state-active.tags a: visited {
  color: #000;
  background: #fff url('img/tag_cloud.png') 1px 0px no-repeat;
}

.comments a {
  background: transparent url('img/comment.png') 1px 0px no-repeat;
}

#tabs-icons .ui-state-active.comments a,
#tabs-icons .ui-state-active.comments a: link,
#tabs-icons .ui-state-active.comments a: visited {
  color: #000;
  background: #fff url('img/comment.png') 1px 0px no-repeat;
}

.comments_all_cloud a {
  background: transparent url('img/comment_cloud.png') 1px 0px no-repeat;
}

#tabs-icons .ui-state-active.comments_all_cloud a,
#tabs-icons .ui-state-active.comments_all_cloud a: link,
#tabs-icons .ui-state-active.comments_all_cloud a: visited {
  color: #000;
  background: #fff url('img/comment_cloud.png') 1px 0px no-repeat;
}

.annotation_count a {
  background: transparent url('img/annotation_count.png') 1px 0px no-repeat;
}

#tabs-icons .ui-state-active.annotation_count a,
#tabs-icons .ui-state-active.annotation_count a: link,
#tabs-icons .ui-state-active.annotation_count a: visited {
  background: #fff  url('img/annotation_count.png') 1px 0px no-repeat;
}

.pane-ecomma-0,
.pane-node-comments {
  height: 550px;
  overflow-y: scroll;
  overflow-x: hidden;
  width: 320px;
}

.page-manager-ajax-pad #tabs-icons{
  width: inherit;
}

#tabs-icons .ui-widget-header {
  border: none;
  background: none;
  width: 35px;
  height: 100%;
}

#tabs-icons .ui-state-active,
#tabs-icons .ui-widget-content {
  color: #000;
  background: #fff;
}

.page-manager-ajax-pad #tabs-icons ul{
  display: none;
}

#tabs-icons {
  position: relative;
  padding-left: 0.5em;
  background: #fff;
  min-height: 260px;
  width: 350px;
  float: left;
}

.ui-tabs {
  background: #fff;
  width: 100%;
}

#tabs-icons ul.ui-tabs-nav {
  margin-left: -4.2em;
}

#tabs-icons .ui-tabs-nav {
  position: absolute;
  padding: 0.2em 0 0.2em 0.2em;
  width: 3.5em;
}
#tabs-icons .ui-tabs-nav li {
  right: 4px;
  border-right: none;
  border-bottom-width: 1px !important;
  border-radius: 4px 0px 0px 4px;
  -moz-border-radius: 4px 0px 0px 4px;
  -webkit-border-radius: 4px 0px 0px 4px;
  overflow: hidden;
}
#tabs-icons .ui-tabs-nav li.ui-tabs-selected {
  border-right: 1px solid transparent;
}
#tabs-icons .ui-tabs-nav li a {
  width: 23px;
}

.ui-state-default,
.ui-widget-content .ui-state-default,
.ui-widget-header .ui-state-default {
  border: 1px solid #ccc;
  /*background: #e6e6e6 url(images/ui-bg_glass_100_f6f6f6_1x400.png) 50% 50% repeat-x;*/
  background: #e6e6e6;
  font-weight: bold;
  color: #1c94c4;
}

.page-manager-ajax-pad #footer{
  diplay: none !important;
}

#footer a {
  width: 33%;
  margin: 0px auto;
  height: 80px;
  float: left;
}

.coerll_logo,
.ecomma_logo,
.ut_logo {
  position: absolute;
  width: 180px;
  height: 80px;
}

.coerll_logo {
  background: transparent url('img/coerll_logo.png') 0px 0px no-repeat;
}

.coerll_logo: hover {
  background: transparent url('img/coerll_logo_over.png') 0px 0px no-repeat;
}

.ecomma_logo {
  background: transparent url('img/ecomma_logo.png') 0px 0px no-repeat;
}

.ecomma_logo: hover {
  background: transparent url('img/ecomma_logo_over.png') 0px 0px no-repeat;
}

.ut_logo {
  background: transparent url('img/ut_logo_glow.png') 0px 0px no-repeat;
}

.ut_logo: hover {
  background: transparent url('img/ut_logo_glow_over.png') 0px 0px no-repeat;
}

.coerll_name,
.ecomma_name,
.ut_name {
  position: relative;
  height: 30px;
  top: 60px;
  display: none;
}

